Fix AdminPrincipalAuthenticator: fail closed without an installed SecurityManager
T4 adversarial board finding (2026-07-20): AdminPrincipalAuthenticator.isAdmin()
authenticated purely by matching a Principal's canonical name string against the
ambient Subject, with no cryptographic binding at this layer. Its own javadoc
claimed this "holds even if a proxy reference is captured and re-invoked" -- but
any code in the same JVM can construct new Subject(true, {forged admin
principal}, ...) and bind it via Subject.callAs/doAs with NO permission check
at all, UNLESS a SecurityManager is installed (Subject.callAs gates on
AuthPermission("callAs"); the deprecated Subject.doAs gates on
AuthPermission("doAs") -- both are JDK-enforced only when a SecurityManager is
present). Nothing in this codebase currently installs one for the subprocess
dispatch thread, so the guarantee was contingent on an external assumption
nothing enforces. Reproduced end-to-end through the real SubProcessPolicyAdmin
wiring and CURRENT_SUBJECT identity source: a forged Subject with zero
legitimate authentication reached the trusted PolicyAdmin backing's grant().

Fix: isAdmin()/requireAdmin() now check System.getSecurityManager() first and
refuse EVERY caller -- including a genuine admin -- when no SecurityManager is
installed, rather than trust an ambient Subject this class has no way to
verify was legitimately bound. This turns the silent bypass into a loud, safe
failure, matching the existing "NO-OP without an installed SecurityManager"
caveat pattern already documented for DeSerializationPermission("ATOMIC")
elsewhere in JGDMS. A capability/token-binding alternative was considered and
rejected: minting an unforgeable token would itself need a permission check,
which is equally a no-op without an installed SecurityManager, so it would not
close a distinct gap over this fix in the current architecture (no live wire
authentication path yet binds a Subject to a TLS-verified identity in-process).

Verif